--- a/ui/src/App.css
+++ b/ui/src/App.css
@@ -2,6 +2,13 @@
 @tailwind components;
 @tailwind utilities;
 
+
+.htitle {
+  font-family: "Exo 2", sans-serif !important;
+  font-optical-sizing: auto;
+  font-style: normal;
+}
+
 .logo {
   height: 6em;
   padding: 1.5em;
